--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
